--- a/workspace/oopJavaScript/WebContent/oopjs.html
+++ b/workspace/oopJavaScript/WebContent/oopjs.html
@@ -6,6 +6,7 @@
 </head>
 <script type="text/javascript"src="js/oop.js"></script>
 <body>
+<h1>Enam</h1>
 <button onclick="text()">OOP</button>
 <p id="demo"></p>
 <button onclick="text1()">OOP1</button>
